--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>CSS variables playground</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="/images/css.ico">
   <script src="script.js" charset="utf-8"></script>
 </head>
 
