testing the script file

--- a/index.html
+++ b/index.html
@@ -6,28 +6,27 @@
   <title>CSS variables playground</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="/images/css.ico">
-  <script src="script.js" charset="utf-8"></script>
+  <script src="/script.js"></script>
 </head>
 
 <body>
 
   <h2><span class="hl">CSS</span> variables playground</h2>
 
+  <img src="images/sample1.jpg" alt="sample image">
+
   <div class="controls">
 
-    <label for="spacing">Spacing</label>
-    <input type="range" name="spacing" min="10" max="200" value="10">
+    <label for="spacing">Padding</label>
+    <input type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
     <label for="blur">Blur</label>
-    <input type="range" name="blur" min="0" max="25" value="10">
+    <input type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
-    <label for="base">Base color</label>
+    <label for="base">Background</label>
     <input type="color" name="base" value="#ffc600">
 
   </div>
-
-  <img src="images/sample1.jpeg" alt="sample image">
-
 
 </body>
 
