--- a/index.html
+++ b/index.html
@@ -4,28 +4,25 @@
 <head>
   <meta charset="utf-8">
   <title>CSS variables playground</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="/images/css.ico">
-  <script src="/script.js"></script>
+
 </head>
 
 <body>
-
+  <link rel="stylesheet" href="/css/master.css">
+  <script src="/script.js" type="text/javascript"></script>
   <h2><span class="hl">CSS</span> variables playground</h2>
 
   <img src="images/sample1.jpg" alt="sample image">
 
   <div class="controls">
+    <label for="spacing">Spacing:</label>
+    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
-    <label for="spacing">Padding</label>
-    <input type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+    <label for="blur">Blur:</label>
+    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
-    <label for="blur">Blur</label>
-    <input type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
-
-    <label for="base">Background</label>
-    <input type="color" name="base" value="#ffc600">
-
+    <label for="base">Base Color</label>
+    <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
 </body>
