--- a/index.html
+++ b/index.html
@@ -15,16 +15,62 @@
   <img src="images/sample1.jpg" alt="sample image">
 
   <div class="controls">
-    <label for="spacing">Spacing:</label>
+    <label for="spacing">Padding</label>
     <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
-    <label for="blur">Blur:</label>
+    <label for="blur">Blur</label>
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
-    <label for="base">Base Color</label>
+    <label for="base">Color</label>
     <input id="base" type="color" name="base" value="#ffc600">
   </div>
 
 </body>
+<style media="screen">
+  :root {
+    --base: #ffc600;
+    --spacing: 10px;
+    --blur: 10px;
+  }
+
+  img {
+    padding: var(--spacing);
+    background: var(--base);
+    filter: blur(var(--blur));
+  }
+
+  .hl {
+    color: var(--base);
+  }
+
+  body {
+    text-align: center;
+    background: grey;
+    color: white;
+    font-family: 'helvetica neue', sans-serif;
+    font-size: 50px;
+  }
+
+  .controls {
+    margin-bottom: 50px;
+  }
+
+  input {
+    width: 100px;
+  }
+</style>
+<script type="text/javascript">
+  const inputs = document.querySelectorAll('.controls input');
+
+  function handleUpdate() {
+    const suffix = this.dataset.sizing || '';
+    document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
+  }
+
+  inputs.forEach(function(input) {
+    input.addEventListener('change', handleUpdate)
+    input.addEventListener('mousemove', handleUpdate)
+  });
+</script>
 
 </html>
