--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>CSS variables playground</title>
-
+  <link rel="stylesheet" href="/css/master.css">
+  <link rel="icon" href="/images/css.ico">
+  <script src="/script.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <link rel="stylesheet" href="/css/master.css">
-  <script src="/script.js" type="text/javascript"></script>
+
   <h2><span class="hl">CSS</span> variables playground</h2>
 
   <img src="images/sample1.jpg" alt="sample image">
@@ -59,18 +60,6 @@
     width: 100px;
   }
 </style>
-<script type="text/javascript">
-  const inputs = document.querySelectorAll('.controls input');
 
-  function handleUpdate() {
-    const suffix = this.dataset.sizing || '';
-    document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix);
-  }
-
-  inputs.forEach(function(input) {
-    input.addEventListener('change', handleUpdate)
-    input.addEventListener('mousemove', handleUpdate)
-  });
-</script>
 
 </html>
